--- a/IOSBoilerplate/Localizable.strings
+++ b/IOSBoilerplate/Localizable.strings
@@ -6,10 +6,9 @@
 
 */
 
-"400-890-2020" = "400-890-2020";
-"Release to refresh..." = "释放刷新...";
-"Last Updated" = "上次更新";
-"Release to refresh..." = "松开可刷新...";
-"Pull down to refresh..." = "下拉可刷新...";
+
+
+"Release to refresh..." = "松开手指更新";
+"Pull down to refresh..." = "向下拉动更新";
 "Loading..." = "加载中...";
 "Incoming intent invalid" = "内部错误,请返回.";
